--- a/render.yaml
+++ b/render.yaml
@@ -1,39 +1,42 @@
-# render.yaml
+# render.yaml - VERSIÓN SIMPLIFICADA
 services:
   - type: web
-    name: laravel-backend-render
+    name: laravel-backend
     env: php
-    region: ohio  # o virginia, oregon según tu preferencia
-    plan: free    # o starter, pro según necesidades
-    
-    # COMANDOS DE CONSTRUCCIÓN
+    region: ohio
+    plan: free
     buildCommand: |
-      # Instalar dependencias
-      composer install --no-dev --optimize-autoloader
+      # 1. Instalar dependencias sin dev
+      composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader
       
-      # Copiar archivo de producción
-      cp .env.production .env
-      
-      # Generar clave si no existe en .env.production
-      if ! grep -q "APP_KEY=base64:" .env; then
-        php artisan key:generate --force
+      # 2. Copiar archivo de entorno de producción
+      if [ -f .env.production ]; then
+        cp .env.production .env
       fi
       
-      # Optimizar Laravel
+      # 3. Generar clave de aplicación si no existe
+      if ! grep -q "APP_KEY=base64:" .env 2>/dev/null; then
+        php artisan key:generate --force --no-interaction
+      fi
+      
+      # 4. Limpiar y optimizar cache
+      php artisan config:clear
+      php artisan cache:clear
+      php artisan view:clear
+      
+      # 5. Optimizar para producción
       php artisan config:cache
       php artisan route:cache
       php artisan view:cache
       
-      # Migrar base de datos
-      php artisan migrate --force
+      # 6. Ejecutar migraciones (SOLO si no hay datos importantes)
+      # php artisan migrate --force --no-interaction
       
-      # Crear enlace de storage
-      php artisan storage:link
+    startCommand: |
+      # Iniciar servidor PHP en el puerto asignado por Render
+      php -S 0.0.0.0:$PORT -t public
       
-    # COMANDO DE INICIO
-    startCommand: php artisan serve --host=0.0.0.0 --port=$PORT
-    
-    # VARIABLES DE ENTORNO (se sobrescriben las de .env)
+    # Variables de entorno MÍNIMAS requeridas
     envVars:
       - key: APP_ENV
         value: production
@@ -41,16 +44,13 @@ services:
         value: false
       - key: LOG_CHANNEL
         value: stderr
+      - key: APP_KEY
+        value: base64:gEhNfQY0HYMVWMqjw8taJPH10ly/QiePhYwi7X59up0=
     
-    # HEALTH CHECK (opcional pero recomendado)
-    healthCheckPath: /api/health
-    initialDelaySec: 30
+    # Configuración de salud
+    healthCheckPath: /
+    initialDelaySec: 60
     
-    # RECURSOS
+    # Auto despliegue
     autoDeploy: true
     branch: main
-    
-    # PLAN FREE: limitaciones
-    # - 750 horas/mes (aprox 31 días)
-    # - Se duerme después de 15 min inactivo
-    # - Auto-despierta con nueva solicitud
